<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Commit.SignUp.Form"
    tools:context=".ui.resetpassword.activity.ResetPasswordActivity">

    <ImageButton
        android:id="@+id/imgBtnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25dp"
        android:layout_marginTop="@dimen/_48dp"
        android:background="@color/white"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24dp"
        android:layout_marginTop="@dimen/_31dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/reset_password"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/_28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBtnClose" />

    <TextView
        android:id="@+id/txtEnterYourRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/enter_your_registered"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/_12sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/txtResetPassword"
        app:layout_constraintTop_toBottomOf="@id/txtResetPassword" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_29dp"
        android:layout_marginTop="@dimen/_22dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/email"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEnterYourRegistered" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_29dp"
        android:layout_marginTop="@dimen/_5dp"
        app:boxStrokeColor="@color/link_color"
        app:endIconMode="custom"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/txtEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_your_email_here"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/_9dp"
            android:paddingStart="@dimen/_13dp"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_14sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtErrorHandlingEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_29dp"
        android:layout_marginTop="@dimen/_5dp"
        android:fontFamily="@font/poppins"
        android:lineSpacingExtra="@dimen/_4sp"
        android:text=""
        android:textSize="@dimen/_12sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/inputEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24dp"
        android:layout_marginTop="@dimen/_22dp"
        android:layout_marginBottom="@dimen/_470dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/blue_transparent"
        android:textSize="@dimen/_18sp"
        app:cornerRadius="@dimen/_5dp"
        app:layout_constraintTop_toBottomOf="@id/txtErrorHandlingEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>