...
    <string name="enter_your_password_here">Masukkan kata sandi</string>
    <string name="already_have_an_account">Sudah punya akun ?</string>
    <string name="login">Masuk</string>
    <string name="terms_and_conditions">Dengan membuat akun berarti Anda menyetujui <b>Syarat &#38; Ketentuan</b> dan <b>Kebijakan Privasi</b></string>
    <string name="create_your_new_account">Buat akun baru dan mulai berbagi hal hal baru !</string>
    <string name="password_must_be">Kata sandi harus minimal 6 karakter dan harus mengandung angka &#38; huruf.</string>
    <string name="something_wrong_email">Ada yang salah dengan alamat email, silakan periksa alamat email Anda lagi.</string>
    <string name="something_wrong_phone">Ada yang salah dengan nomor telepon, pastikan nomor Anda dimulai dengan +62 / 62.</string>
    <string-array name="domicile">
        <item>ACEH</item>
        <item>BALI</item>
        <item>BANTEN</item>
        <item>BENGKULU</item>
...
